--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="player-container">
         <div class="glass-card">
             <div class="album-art-container">
-                <img src="./assets/album_art.png" alt="Hugging You Album Art" class="album-art">
+                <img src="./assets/album_art.jpeg" alt="Hugging You Album Art" class="album-art">
                 <div class="glow-ring"></div>
             </div>
             
